# job-processor

./: .env.example  .gitignore  Cargo.toml  README.md  WORKERS.md
down_migrations/: 20231220000001_create jobs table.sql
migrations/: 20231220000001_create_jobs_table.sql
src/: config.rs  main.rs  shutdown.rs
src/api/: dummy.rs  health.rs  mod.rs  validation.rs
src/api/job/: dto.rs  handlers.rs  mod.rs  models.rs  service.rs
src/db/: connection.rs  job_repository.rs  migrations.rs  mod.rs  models.rs
src/http/: dummy.rs  state.rs
src/worker/: job_worker.rs  mod.rs
