[package]
name = "job-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
actix-web-validator = "6.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }